--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="primary">#FF6200EE</color>
-    <color name="primary_dark">#FF3700B3</color>
-    <color name="accent">#FF03DAC5</color>
-    <color name="error">#FFB00020</color>
+    <color name="primary">#5E35B1</color>
+    <color name="primary_dark">#4527A0</color>
+    <color name="accent">#00BCD4</color>
+    <color name="error">#C62828</color>
+    <color name="text_primary">#000000</color>
+    <color name="text_secondary">#424242</color>
+    <color name="background">#FFFFFF</color>
 </resources>
